feat: se solucionaron los errores que lanzaba el docker